asatsuyu/crates/asatsuyu-cli/src/lsp/snapshots/asatsuyu_cli__lsp__analysis__tests__completion_top_level.snap
---
source: crates/asatsuyu-cli/src/lsp/analysis.rs
expression: snapshot
---
async fn                  keyword [snippet]
fn                        keyword [snippet]
from python import        keyword [snippet]
import                    keyword
list                      symbol(Builtin)
option                    symbol(Builtin)
println                   symbol(Builtin)
pub                       keyword
pub fn                    keyword [snippet]
string_concat             symbol(Builtin)
type                      keyword [snippet]
